# GAMES101Homework

Assignment1/Code/: main.cpp
Assignment2/Code/: CMakeLists.txt  global.cpp  global.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/Code/: Texture.hpp  main.cpp  rasterizer.cpp
Assignment4/Code/: main.cpp
Assignment5/Code/: Renderer.cpp  Triangle.hpp  main.cpp
Assignment6/Code/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Triangle.hpp
Assignment7/Code/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Scene.cpp  main.cpp
Assignment8/src/: rope.cpp
pa0/: main.cpp
